article overflow on mobile fix

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,6 +8,7 @@
 
   .user-btn {
     display: none;
+    margin-right: 0.5rem;
   }
 
   &.position-relative {
