--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -27,7 +27,7 @@
 
 @include media-breakpoint-down(sm) {
   :root {
-    --padding-x: 0rem;
+    --padding-x: 5px;
   }
 }
 
